--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "babel": {
     "presets": [
       "env",
+      "es2017",
       "react"
     ],
     "plugins": [
@@ -23,14 +24,19 @@
     "babel-loader": "7",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "isomorphic-style-loader": "^5.1.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "nodemon": "^1.19.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
     "cors": "^2.8.5",
+    "emoji-mart": "^2.11.1",
     "express": "^4.17.1",
     "express-router": "^0.0.1",
     "isomorphic-fetch": "^2.2.1",
